Release 1.2.2
Update to JDK 11, use fixed ytd and solve some VLC issues